--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,9 +13,12 @@ jobs:
           
       - name: Install dependencies
         run: npm install
-        
+
       - name: Build web assets
         run: npm run build
+        env:
+          VITE_AI_API_KEY: ${{ secrets.GEMINI_API_KEY }} # Itt kötjük össze a kettőt
+
         
       - name: Setup Java JDK 21
         uses: actions/setup-java@v4
