--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,16 +13,18 @@ jobs:
           
       - name: Install dependencies
         run: npm install
-
+         
       - name: Build web assets
-        run: npm run build
-        env:
-          VITE_AI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        run: |
+        echo "VITE_AI_API_KEY=${{ secrets.GEMINI_API_KEY }}" > .env
+          npm run build
+
 
         
       - name: Setup Java JDK 21
-        uses: actions/setup-java@v4
-        with:
+        -uses: actions/setup-java@v4
+
+        with::
           distribution: 'temurin'
           java-version: '21'
           
