--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,41 +1,57 @@
 name: Build APK
-on: [push]
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 22
-          
+          node-version: 18
+
       - name: Install dependencies
         run: npm install
-         
+
       - name: Build web assets
         run: |
-        echo "VITE_AI_API_KEY=${{ secrets.GEMINI_API_KEY }}" > .env
+          echo "VITE_AI_API_KEY=${{ secrets.GEMINI_API_KEY }}" > .env
           npm run build
-        
-      - name: Setup Java JDK 21
-        -uses: actions/setup-java@v4
+        env:
+          VITE_AI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
-        with::
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
           distribution: 'temurin'
-          java-version: '21'
-          
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
+      - name: Install Capacitor CLI
+        run: npm install -g @capacitor/cli
+
+      - name: Sync Capacitor
+        run: npx cap sync android
+
       - name: Build Android APK
         run: |
-          npx cap sync
           cd android
-          chmod +x gradlew
           ./gradlew assembleDebug
-          
+
       - name: Upload APK
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: airdrop-agent-apk
+          name: app-debug
           path: android/app/build/outputs/apk/debug/app-debug.apk
 
