--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,8 +50,7 @@ jobs:
           ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: app-debug
-          path: android/app/build/outputs/apk/debug/app-debug.apk
-
+          name: your-artifact-name
+          path: path/to/your.apk
